src/styles.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  background-color: #252525;
  color: #f6f6f6;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  margin-top: 0.25em;

  overflow-y: hidden;

}

.top-bar {
  margin: 0;
}

#button-row {
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
  justify-content: space-evenly;
  margin: 0;
}

.container {
  margin: 0;
  padding-top: 2vh;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: center;

  height: 90vh;
}

.editor {
  background-color: #1f1f1f;
  margin-left: 1em;
  width: 100%;
  height: 100%;

  border-radius: 15px;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;


}

.row {
  display: flex;
  justify-content: center;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

h1 {
  text-align: center;
}

input,
button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  color: #ffffff;
  background-color: #770079;
  transition: border-color 0.25s;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
}

button {
  cursor: pointer;
  box-sizing: border-box;
}

button:hover {
  border-color: #c539d8;
  box-shadow: 0 0 5px #c539d8, 0 0 10px #c539d8, 0 0 15px #c539d8, 0 0 20px #c539d8;
  box-sizing: border-box;

}

button:active {
  border-color: #ab39d8;
  background-color: #44003e;
}

#create-tag {
  margin: 0.5em;

  background-color: #252525;
  color: #f6f6f6;
}

#create-input {
  margin: 0.5em;

  height: 100%;

  font-size: 16px;
  line-height: 1.5;

  padding: 10px;

  border: 1px solid #3b3b3b;
  border-radius: 5px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);

  resize: none;

  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  background-color: #252525;
  color: #f0f0f0;

  box-sizing: border-box;
}

#create-input:focus {
  border-color: #cf66e9;
  box-shadow: 0 0 5px rgba(102, 175, 233, 0.6);
  outline: none;
  /* Remove default focus outline */
}

input,
button {
  outline: none;
}

#show-notes-button {
  max-width: 30%;
  align-self: center;
}

#greet-input {
  margin-right: 5px;
}



.sidebar {
  background-color: #0f0f0f;
  width: 35%;
  padding: 0 20px;

  border-radius: 15px;
}

.note-sidebar-container {
  max-height: 90%;
  overflow-y: scroll;
}

.sidebar-note {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;
}

.sidebar-note:hover {
  cursor: pointer;
  background-color: #770079;
}

.sidebar-note-id {
  margin-right: 30px;
  font-weight: bold;
}

.sidebar-note-content {
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  text-align: left;
}

.sidebar-note-tag {
  margin-left: 10px;
  padding: 2px 6px;
  border-radius: 4px;

  flex-shrink: 0;
  flex-grow: 0;

  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

#reverse-icon {
  width: 1.5em;
  height: 1.5em;

  color: white;

  cursor: pointer;

  margin-right: 1.5em;
  margin-left: -0.8em;
}

/* CONTEXT MENU */

.context-menu {
  position: relative;
}

.menu {
  display: none;
  position: absolute;
  z-index: 999;
  border: 1px solid #ccc;
  padding: 5px;

  background-color: #252525;
}

.menu button {
  display: block;
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 5px;
}

.menu button:hover {
  background-color: #770079;
}

/* Searchbar */

.searchbar-container {
  margin: 0.8em 0.5em 0.5em 0.5em;

  display: flex;
  align-items: center;
}

#note-searchbar {
  width: 100%;
  padding: 10px;
  border: none;
  border-radius: 8px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  outline: none;
  font-size: 16px;
  line-height: 1.5;
  margin: 0 -0.6em;

  background-color: #252525;
  color: #f6f6f6;
}

#note-searchbar::placeholder {}

/* Open by ID Modal */


#id-modal-bg {
  display: none;

  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.534);
  filter: grayscale();
  /* Semi-transparent black */
  z-index: 1;
  /* Ensure it's behind the modal */
}


#id-modal-container {
  display: none;

  position: fixed;

  margin-top: 20%;
  margin-left: 50%;

  z-index: 3;
}

#settings-modal-container {
  display: none;

  position: fixed;

  margin-top: 20%;
  margin-left: 50%;

  z-index: 4;
}

/* MISC */

/* Fancier Scrollbar */

/* Hide scrollbar track */
::-webkit-scrollbar {
  width: 4px;
  visibility: hidden;
}

::-webkit-scrollbar:hover {
  visibility: visible;
  /* Show the scrollbar when hovered */
}

::-webkit-scrollbar-thumb {
  background: #888;
}


::-webkit-scrollbar-thumb:hover {
  background: #555;
}

